# web-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.cpp  nginx.conf
.github/workflows/: cmake-single-platform.yml
home/: 404.html
home/app/: index.html
home/davy-site/: form.py  image.html  image.py  index.html  index.py  main.py  test.html  test.py
home/davy-site/new/: new.html
home/ranna-site/: 404.html  50x.html  index.php  index.py  new.html
home/ranna-site/errors/: error-404.html
pages/app/: 404.py  500.py  calculator.py  index.py  myspace.py  upload.py
srcs/: CMakeLists.txt  Makefile  cgi.cpp  define.hpp  log  main.cpp  main_test.cpp  server.cpp  test_methods_rewrite.cpp  test_parser.cpp  web.cpp
srcs/HandlerFileSystem/: Handler.cpp  Handler.hpp  IHandler.cs  IHandler.hpp
srcs/Http/: EHttpStatusCode.hpp  Http.cpp  Http.hpp  define.hpp
srcs/Http/Client/: Client.hpp  IClient.hpp
srcs/Http/Fastcgi/: Fastcgi.cpp  Fastcgi.hpp
srcs/Http/Request/: HttpRequest.cpp  HttpRequest.hpp
srcs/Http/Response/: BuilderResponse.cpp  BuilderResponse.hpp  HttpResponse.cpp  HttpResponse.hpp  IBuilderResponse.hpp  IHttpResponse.hpp
srcs/Http/Route/: BuilderRoute.cpp  BuilderRoute.hpp  IBuilderRoute.hpp  IRoute.hpp  Route.cpp  Route.hpp
srcs/Http/Server/: BuilderServer.cpp  BuilderServer.hpp  IBuilderServer.hpp  IServer.hpp  Server.cpp  Server.hpp
srcs/Logging/: ILogger.hpp  Logger.hpp
srcs/Parser/: Parser.cpp  Parser.hpp  ParserParams.hpp
srcs/Parser/test_metodos/: nginx.conf
srcs/Server/: BuilderResponse.hpp  CommonParameters.cpp  CommonParameters.hpp  Http.cpp  Http.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpResponse1.cpp  HttpResponse1.hpp  IBuilderResponse.hpp  IServer.hpp  Route.cpp  Route.hpp  RouteResponse.cpp  RouteResponse.hpp  Server.cpp  Server.hpp  define.hpp
srcs/Server/Response/: AHttpResponse.cpp  AHttpResponse.hpp  BuilderResponse.cpp  BuilderResponse.hpp  EHttpStatusCode.hpp  HttpResponse.cpp  HttpResponse.hpp  IAHttpResponse.hpp  IHttpResponse.hpp  Response200OK.cpp  Response200OK.hpp  Response201Created.cpp  Response201Created.hpp  Response404NotFound.cpp  Response404NotFound.hpp  ResponseOK.cpp  ResponseOK.hpp
srcs/Server/Route/: BuilderRoute.hpp  IBuilderRoute.hpp  IRoute.hpp  Route.cpp  Route.hpp
srcs/Server/Server/: BuilderServer.hpp  IBuilderServer.hpp
srcs/Tests/: BuilderServerTest.cpp  CMakeLists.txt  ParserParamsTest.cpp  RequestTest.cpp  ResponseTest.cpp  RouteTest.cpp  TestCMakeLists.txt  UtilsTest.cpp  parser_test.cpp
srcs/Utils/: Utils.cpp  Utils.hpp
srcs/config/: nginx.conf  nginx.config  ravy.conf  sample-file.conf  test.conf
srcs/config/errors/: server_syntax_error.conf
srcs/file_config_test/: error_rewrite_empty.conf  test_config1.conf  test_error2.conf  test_error3.conf  test_error4.conf  test_error5.conf  test_error6.conf
srcs/static/: index.html  new.html
srcs/utils/: Utils.cpp  Utils.hpp
tests/: CMakeLists.txt
